Spec changes for issue 22254
Review URL: https://codereview.chromium.org//882643004

git-svn-id: https://dart.googlecode.com/svn/branches/bleeding_edge/dart@43565 260f80e4-7a28-3924-810f-c04153c831b5

--- a/pkg/analysis_server/tool/spec/spec_input.html
+++ b/pkg/analysis_server/tool/spec/spec_input.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>Analysis Server API Specification</h1>
-    <h1 style="color:#999999">Version <version>1.1.0</version></h1>
+    <h1 style="color:#999999">Version <version>1.2.0</version></h1>
     <p>
       This document contains a specification of the API provided by the
       analysis server.  The API in this document is currently under
@@ -468,11 +468,26 @@
       </request>
       <request method="reanalyze">
         <p>
-          Force the re-analysis of everything contained in the
-          existing analysis roots. This will cause all previously
-          computed analysis results to be discarded and recomputed,
-          and will cause all subscribed notifications to be re-sent.
+          Force the re-analysis of everything contained in the specified
+          analysis roots. This will cause all previously computed analysis
+          results to be discarded and recomputed, and will cause all subscribed
+          notifications to be re-sent.
         </p>
+        <p>
+          If no analysis roots are provided, then all current analysis roots
+          will be re-analyzed. If an empty list of analysis roots is provided,
+          then nothing will be re-analyzed. If the list contains one or more
+          paths that are not currently analysis roots, then an error of type
+          <tt>INVALID_ANALYSIS_ROOT</tt> will be generated.
+        </p>
+        <params>
+          <field name="roots" optional="true">
+            <list><ref>FilePath</ref></list>
+            <p>
+              A list of the analysis roots that are to be re-analyzed.
+            </p>
+          </field>
+        </params>
       </request>
       <request method="setAnalysisRoots">
         <p>
@@ -1285,7 +1300,9 @@
           text is passed in so that the selection can be preserved across the
           formatting operation. The updated selection will be as close to
           matching the original as possible, but whitespace at the beginning or
-          end of the selected region will be ignored.
+          end of the selected region will be ignored. If preserving selection
+          information is not required, zero (0) can be specified for both the
+          selection offset and selection length.
         </p>
         <p>
           If a request is made for a file which does not exist, or
@@ -1304,17 +1321,13 @@
           <field name="selectionOffset">
             <ref>int</ref>
             <p>
-              The offset of the current selection in the file. In case
-              preserving, selection information is not required, 0 can be
-              specified for both selection offset and length.
+              The offset of the current selection in the file.
             </p>
           </field>
           <field name="selectionLength">
             <ref>int</ref>
             <p>
-              The length of the current selection in the file. In case
-              preserving, selection information is not required, 0 can be
-              specified for both selection offset and length.
+              The length of the current selection in the file.
             </p>
           </field>
           <!--
