Implement 'help' command for Observatory debugger.
Supports tab-completion.

BUG=
R=johnmccutchan@google.com

Review URL: https://codereview.chromium.org//921893004

git-svn-id: https://dart.googlecode.com/svn/branches/bleeding_edge/dart@43749 260f80e4-7a28-3924-810f-c04153c831b5

--- a/runtime/observatory/lib/src/elements/debugger.html
+++ b/runtime/observatory/lib/src/elements/debugger.html
@@ -233,10 +233,12 @@
       }
       .normal {
         font: normal 14px consolas, courier, monospace;
+        white-space: pre;
         line-height: 125%;
       }
       .bold {
         font: bold 14px consolas, courier, monospace;
+        white-space: pre;
         line-height: 125%;
       }
       .spacer {
