Add Breakpoint class to Observatory.
BUG=
R=rmacnak@google.com

Review URL: https://codereview.chromium.org//926103002

git-svn-id: https://dart.googlecode.com/svn/branches/bleeding_edge/dart@43776 260f80e4-7a28-3924-810f-c04153c831b5

--- a/runtime/observatory/lib/src/elements/nav_bar.html
+++ b/runtime/observatory/lib/src/elements/nav_bar.html
@@ -325,7 +325,7 @@
            _href="{{ gotoLink('/inspect', event.isolate) }}">{{ event.isolate.name }}</a>
         is paused
         <template if="{{ event.breakpoint != null }}">
-          at breakpoint {{ event.breakpoint['breakpointNumber'] }}
+          at breakpoint {{ event.breakpoint.number }}
         </template>
         <template if="{{ event.eventType == 'ExceptionThrown' }}">
           at exception
