--- a/pkg/analysis_server/tool/spec/spec_input.html
+++ b/pkg/analysis_server/tool/spec/spec_input.html
@@ -162,6 +162,17 @@
       </ul>
       </dd>
     </dl>
+    <dl>
+      <dt>--no-index</dt>
+      <dd>
+      An indication that no indexer calls will be made to the analysis server,
+      and thus, no index should be created. If this flag is passed and an API is
+      used that requires an index, then an <tt>NO_INDEX_GENERATED</tt> exception
+      will be thrown. The set of API calls that require an index include:
+      refactoring calls, code completions and searching.
+      <!-- TODO(jwren/scheglov): make sure that this of APIs that is complete. -->
+      </dd>
+    </dl>
     </blockquote>
     <domain name="server">
       <p>
@@ -3097,7 +3108,7 @@
           <value>
             <code>INVALID_OVERLAY_CHANGE</code>
             <p>
-              An analysis.updateContent request contained a
+              An "analysis.updateContent" request contained a
               ChangeContentOverlay object which can't be applied, due
               to an edit having an offset or length that is out of
               range.
@@ -3113,6 +3124,13 @@
             <code>INVALID_REQUEST</code>
             <p>
               A malformed request was received.
+            </p>
+          </value>
+          <value>
+            <code>NO_INDEX_GENERATED</code>
+            <p>
+              The "--no-index" flag was passed when the analysis server created,
+              but this API call requires an index to have been generated.
             </p>
           </value>
           <value>
