Fix build, address comments from Brian in previous email.
R=brianwilkerson@google.com

Review URL: https://codereview.chromium.org//931833003

git-svn-id: https://dart.googlecode.com/svn/branches/bleeding_edge/dart@43820 260f80e4-7a28-3924-810f-c04153c831b5

--- a/pkg/analysis_server/tool/spec/spec_input.html
+++ b/pkg/analysis_server/tool/spec/spec_input.html
@@ -165,9 +165,8 @@
     <dl>
       <dt>--no-index</dt>
       <dd>
-      An indication that no indexer calls will be made to the analysis server,
-      and thus, no index should be created. If this flag is passed and an API is
-      used that requires an index, then an <tt>NO_INDEX_GENERATED</tt> exception
+      Disable the server from generating an index. If this flag is passed and an
+      API is used that requires an index, then an error, <tt>NO_INDEX_GENERATED</tt>,
       will be thrown. The set of API calls that require an index include:
       refactoring calls, code completions and searching.
       <!-- TODO(jwren/scheglov): make sure that this of APIs that is complete. -->
